getallchat add-patient issue resolved

--- a/web/src/app/components/admin-dashboard/components/device-page/device-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/device-page/device-page.component.html
@@ -259,7 +259,7 @@
           <mat-header-cell
             *matHeaderCellDef
             style="
-              border-radius: 0.8rem 0px 0px 0px !important;
+              border-radius: 0.0rem 0px 0px 0px !important
 
             "
           >
