--- a/web/src/app/components/admin-dashboard/components/team-page/team-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/team-page/team-page.component.html
@@ -14,6 +14,7 @@
               <img
                 class="arrow-img"
                 src="../../../../../../assets/04-Icons/Icons_Arrow - Back.svg"
+                (click)="backtohome()"
               />
             </div>
             <p class="main_title">Teams</p>
