NotificationIssue SolvedUpdate Task Dialog box updated

--- a/web/src/app/components/admin-dashboard/components/notification/notification.component.html
+++ b/web/src/app/components/admin-dashboard/components/notification/notification.component.html
@@ -89,7 +89,7 @@
               </div>
             </div>
           </div>
-          <div class="history_notification notification_subpanel">
+          <div class="notification_subpanel">
             <div class="history_notification">
               <div class="today_header">
                 <p>History</p>
