--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -2037,6 +2037,10 @@ td.mat-cell:last-child {
   justify-content: space-between;
 
 }
+.dialogContainer h2 {
+
+  color: #ffffff;
+}
 .btn-sent {
   width: 200px;
   height: fit-content;
