--- a/web/src/app/components/admin-dashboard/components/notification/notification.component.scss
+++ b/web/src/app/components/admin-dashboard/components/notification/notification.component.scss
@@ -62,6 +62,7 @@ p {
   display: flex;
   justify-content: space-between;
   padding-left: 15px;
+  height: 2rem;
 }
 .today_header p {
   color: #164d61;
@@ -243,10 +244,7 @@ p {
   background-color: #ffff;
   padding: 0.8rem;
   display: flex;
-  width: 100%;
   justify-content: space-between;
   margin-bottom: 1px;
 }
-.clear_all {
-  margin-top: 0.8rem;
-}
+
