--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.scss
@@ -1,15 +1,14 @@
-.activity_chatInfo_panel {
-  margin-left: 2rem;;
-  background-color: #164d61;
-  padding: 0.5rem;
-
-  // z-index: -1;
-  height: 50vh;
-  padding: 1.2rem;
-  min-width: 280px;
-  overflow-y: auto;
-  position: relative;
-}
+ .activity_chatInfo_panel
+		{
+			margin-left: 2rem;
+			background-color: #164d61;
+			padding: 0.5rem;
+			height: 48vh; // chat list height
+			padding: 0.2rem;
+			min-width: 280px;
+			overflow-y: auto;
+			position: relative;
+		}
 .message_container {
   overflow-y: auto;
   max-height: 200px;
@@ -22,6 +21,21 @@
 }
 .chat_panel_upper p{
   color:#8be3d9
+}
+
+.chat_panel_upper
+{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: red;
+  top: 0;
+  z-index: 10;
+  align-items: center;
+  padding: 0px 1rem;
+  height: 39px;
+  position: sticky;
+  margin: 0;
 }
 .chaticon {
   width: 1.25rem;
@@ -176,9 +190,11 @@ li + li {
 }
 
 .activity_chatInfo_data
-{
- height: 450px;
-}
+		{
+			height: 450px;
+			overflow-y: auto;
+			max-height: calc(100vh - 50px);
+		}
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px #164d61;
   border-radius: 10px;
