video-alignment and mute issue solved

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.scss
@@ -1,14 +1,14 @@
- .activity_chatInfo_panel
-		{
-			margin-left: 2rem;
-			background-color: #164d61;
-			padding: 0.5rem;
-			height: 48vh; // chat list height
-			padding: 0.2rem;
-			min-width: 280px;
-			overflow-y: auto;
-			position: relative;
-		}
+.activity_chatInfo_panel {
+  margin-left: 2rem;;
+  background-color: #164d61;
+  padding: 0.5rem;
+
+  height: 50vh;
+  padding: 1.2rem;
+  min-width: 280px;
+  overflow-y: hidden;
+  position: relative;
+}
 .message_container {
   overflow-y: auto;
   max-height: 200px;
@@ -21,21 +21,6 @@
 }
 .chat_panel_upper p{
   color:#8be3d9
-}
-
-.chat_panel_upper
-{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  background-color: red;
-  top: 0;
-  z-index: 10;
-  align-items: center;
-  padding: 0px 1rem;
-  height: 39px;
-  position: sticky;
-  margin: 0;
 }
 .chaticon {
   width: 1.25rem;
