--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -8,8 +8,21 @@ body {
 body {
   margin: 0;
   font-family: "Rubik";
-  // overflow-y:hidden
+
 }
+
+
+.mat-mdc-paginator-page-size-label
+{
+  font-family: 'Rubik-normal';
+  font-size: 0.7rem;
+}
+.mat-mdc-paginator-page-size-value
+{
+  font-family: 'Rubik-normal';
+  font-size: 0.7rem;
+}
+/* Optional: Show full header text on hover */
 
 @font-face {
   font-family: "Rubik";
@@ -612,7 +625,7 @@ th {
 // }
 @media only screen and (max-width: 56rem) {
   .upperpanel_subtitle {
-    font-size: 0.6rem;
+    font-size: 0.54rem;
   }
   .mat-header-cell {
     font-size: 0.6rem !important;
