bugfix report page and chat removed not update issue

--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.scss
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.scss
@@ -1737,7 +1737,10 @@ table {
 .device_Vital_panel {
   width: 100%;
 }
-
+.device_panel
+{
+  margin-bottom: 2rem;
+}
 .userInfoTitle {
   font-size: 14px;
   line-height: 30px;
