--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -441,12 +441,12 @@
             >
            <div id="mydiv" class="myvideoContainer" cdkDrag  style="position: absolute; top: 0px; left: 0px;">
             <div>
-            <img
+            <!-- <img
       class="tool_icon tool_icon_close"
       style="cursor: pointer; float: right"
       src="../../../../../assets/04-Icons/Icons_Cancel.svg"
       (click)="disconnectVideo()"
-    />
+    /> -->
   </div>
   <div class="upper_toolPanel">
     <div class="timerPanel">{{ videoTimer }}</div>
