error message update

--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
@@ -1224,7 +1224,7 @@
                         programForm.get('startdate')?.touched
                       "
                     >
-                      start date is Required
+                      start date is required
                     </ng-container>
                   </div>
                 </div>
