--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -1133,7 +1133,7 @@
                             programForm.get('startdate')?.touched
                           "
                         >
-                          start date is Required
+                          Start date is required
                         </ng-container>
                       </div>
                     </div>
