--- a/web/src/app/components/admin-dashboard/shared/right-sidebar/right-sidebar.component.html
+++ b/web/src/app/components/admin-dashboard/shared/right-sidebar/right-sidebar.component.html
@@ -635,7 +635,7 @@
                   registerSchedule.get('startDate')?.invalid &&
                   registerSchedule.get('startDate')?.touched
                 "
-                >Start date is Required
+                >Start date is required
               </ng-container>
             </div>
           </div>
@@ -1420,7 +1420,7 @@
                   registerSchedule.get('startDate')?.invalid &&
                   registerSchedule.get('startDate')?.touched
                 "
-                >Start date is Required
+                >Start date is required
               </ng-container>
             </div>
           </div>
@@ -1470,7 +1470,7 @@
                   registerSchedule.get('startDate')?.invalid &&
                   registerSchedule.get('startDate')?.touched
                 "
-                >Start date is Required
+                >Start date is required
               </ng-container>
             </div>
           </div>
