--- a/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
@@ -961,7 +961,7 @@
                     registerSchedule.get('startDate')?.invalid &&
                     registerSchedule.get('startDate')?.touched
                   "
-                  >Start date is Required
+                  >Start date is required
                 </ng-container>
               </div>
             </div>
@@ -1480,7 +1480,7 @@
                     registerSchedule.get('startDate')?.invalid &&
                     registerSchedule.get('startDate')?.touched
                   "
-                  >Start date is Required
+                  >Start date is required
                 </ng-container>
               </div>
             </div>
@@ -1528,7 +1528,7 @@
                     registerSchedule.get('startDate')?.invalid &&
                     registerSchedule.get('startDate')?.touched
                   "
-                  >Start date is Required
+                  >Start date is required
                 </ng-container>
               </div>
             </div>
@@ -2232,7 +2232,7 @@
                   addMedicationForm.get('medicationstartDate')?.invalid &&
                   addMedicationForm.get('medicationstartDate')?.touched
                 "
-                >Start date is Required
+                >Start date is required
               </ng-container>
             </div>
           </div>
