patient page hover issue solved

--- a/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.scss
@@ -814,13 +814,11 @@ mat-progress-spinner {
 }
 
 
-.mat-mdc-cell:hover {
-  white-space: normal;
-  overflow: visible;
-  z-index: 1;
-  // position: relative;
-  // background-color: #edeff5;
-}
+// .mat-mdc-cell:hover {
+//   white-space: normal;
+//   overflow: visible;
+//   z-index: 1;
+// }
 
 .mat-mdc-header-cell {
   white-space: nowrap;
