not cancel btn issue resolved

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -4,7 +4,7 @@
 </ng-container>
 <div class="container_panel">
   <div class="main_panel">
-    <div class="main-content-panel01" [ngStyle]="{ width: '98%' }">
+    <div class="main-content-panel01" >
       <div class="main_page_upper_panel">
         <div class="page-header">
           <div class="page-header-panel">
@@ -5641,7 +5641,7 @@
         class="btn_cancel"
         [mat-dialog-close]="true"
         id="pd_smryUpdateCancel"
-        (click)="OnpreviewUpdateCancel()"
+        (click)="onPreviewSummaryCancel()"
       >
         CANCEL
       </button>
