--- a/web/src/app/components/admin-dashboard/shared/header/header.component.html
+++ b/web/src/app/components/admin-dashboard/shared/header/header.component.html
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="notification_content_panel">
-              <div *ngFor="let notification of notifications&&notifications.Data">
+              <div *ngFor="let notification of list&&list">
                 <div class="notification_description_panel">
                   <div
                     *ngFor="
