--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.html
@@ -77,7 +77,7 @@
 
   <!-- ChatInfoTemplate  Table End-->
   <!-- ChatInfoTemplate  side Chat Start-->
-          <div class="activity_chatInfo_panel"  *ngIf="showMessagePanel">
+          <div class="activity_chatInfo_panel1"  *ngIf="showMessagePanel">
             <div class="chat_panel_upper">
               <p>Chats</p>
               <img
