--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.scss
@@ -3,11 +3,17 @@
   background-color: #164d61;
   padding: 0.5rem;
 
-  height: 50vh;
+  height: 450px;
   padding: 1.2rem;
-  min-width: 280px;
-  overflow-y: hidden;
+  min-width: 200px;
+  overflow-y: scroll;
   position: relative;
+}
+.activity_chatInfo_panel1
+{
+  background-color: #164d61;
+  max-width: 200px;
+  margin-left: 2rem;;
 }
 .message_container {
   overflow-y: auto;
@@ -18,6 +24,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding:0.7rem
 }
 .chat_panel_upper p{
   color:#8be3d9
@@ -48,7 +55,7 @@
   font-family: "Rubik";
   position: relative;
   min-width: 150px;
-  max-width: 250px;
+  max-width: 180px;
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
@@ -100,7 +107,7 @@ li + li {
   position: relative;
   font-family: "Rubik";
   min-width: 120px;
-  max-width: 250px;
+  max-width:180px;
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
@@ -180,13 +187,16 @@ li + li {
 
 .activity_chatInfo_data
 		{
-			height: 450px;
+      width: fit-content;
+			max-height: 350px;
 			overflow-y: auto;
-			max-height: calc(100vh - 50px);
+      background-color: #164d61;
+      width: 200px;
+			//max-height: calc(100vh - 50px);
 		}
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #164d61;
-  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 2px #164d61;
+  border-radius: 4px;
   background-color: #f5f5f5;
 }
 
