--- a/web/src/app/components/admin-dashboard/shared/header/header.component.scss
+++ b/web/src/app/components/admin-dashboard/shared/header/header.component.scss
@@ -142,13 +142,13 @@
 .badge {
   position: absolute;
 
-  top: -4px;
-  right: 16px;
-  font-size: 0.7rem;
+  top: -9px;
+  right: 14px;
+  font-size: 0.6rem;
   color: #d8dce5;
   border-radius: 50%;
-  width: 13px;
-  height: 13px;
+  min-width: 15px;
+  height: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
