bugFix - SMS dialog click icon

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -1566,6 +1566,7 @@
                 <img
                   class="device_img"
                   src="../../../../../assets/04-Icons/Icons_SMS A.svg"
+                  (click)="openDialogWithTemplateRef()"
                 />
               </div>
             </div>
