Bug fixes - admin/devicepage/login pages

--- a/web/src/app/components/admin-dashboard/components/device-page/device-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/device-page/device-page.component.scss
@@ -166,7 +166,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px;
+  // max-width: 200px;
 }
 
 
@@ -182,7 +182,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px; /* Adjust based on your design needs */
+  // max-width: 200px; /* Adjust based on your design needs */
   padding: 0 8px; /* Add some padding for better spacing */
 }
 .search_input {
